# o2eadp-2025-kasparek

./: README.md  pyproject.toml
examples/01-fitting/: 01-01-linear_regression.ipynb  01-02-power_law_regression.ipynb  01-02-power_law_regression_.ipynb  01-03a-pymc-linear_model+group_noise.ipynb
examples/01-fitting/data/: 01-02-power_law_scaling-data.csv  01-02-power_law_scaling-log_data.csv  01-03-group_noise-data.csv
examples/02-spectra-inference/: cxrs_spectra_inference.ipynb
tasks/: cxrs_spectra_inference.ipynb  xarray_test.ipynb
