[tool.poetry]
name = "o2eadp"
version = "0.1.0"
description = ""
authors = ["seidlj <jakub.seidl@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cherab = "^1.5.0"
cherab-solps = {git = "https://github.com/cherab/solps.git", rev = "development"}
numpy = "<2.0"
scipy = "^1.15.2"
xarray = "^2025.1.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
pymc = "^5.20.1"
hvplot = "^0.11.2"
bayesian-optimization = "^2.0.3"
holoviews = "^1.20.1"
scikit-learn = "^1.6.1"
xrscipy = "^2.1.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
